Huge refactoring of REST model
OpenUI5 REST model now supports basic CRUD with a mORMot REST server.
Still work in progress.

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -1,6 +1,12 @@
 SHELL_TITLE=My mORMot App
 
+appDescription=This demo application shows you how to use the sap.m library (OpenUI5) along with the mORMot !
+
+appTitle=My mORMot App
+
 DIALOG_CANCEL_ACTION=Cancel
+SAVE_BUTTON_TEXT=Save
+CANCEL_BUTTON_TEXT=Cancel
 
 WELCOME_TITLE=Welcome
 WELCOME_TEXT=This demo application shows you how to use the sap.m library (OpenUI5) along with the mORMot !
@@ -13,10 +19,29 @@ HOME_TEAM_LIST_HEADER=Teams
 
 TEAM_NO_DATA=No members found
 
+MEMBER_ADD_PAGE_TITLE=Add new member
+MEMBER_ADD_FORM_TITLE=New member
+MEMBER_ADD_TITLE=General info
+ADD_MEMBER_SUCCESS_TEXT=Member added !!
+ADD_MEMBER_FAILURE_TEXT=Member added !!
+
+ADD_TEAM_TITLE=Member team
+ADD_TEAM_LABLE=Choose team
+
 MEMBER_SORTFIRSTNAME_BUTTON_TEXT=FirstName
 MEMBER_SORTLASTNAME_BUTTON_TEXT=LastName
 MEMBER_SORTDOB_BUTTON_TEXT=Birthday
 MEMBER_MAIL_BUTTON_TEXT=Mail
+MEMBER_NAME_ERROR=Please enter firstname and lastname
+
+NONE=None
+FIRSTNAME=FirstName
+LASTNAME=LastName
+PHONE=Phone
+EMAIL=Email
+TEAM=Team
+
+
 
 ResumeOf=Resume of
 Info=Info
