Added add team dialog

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -7,6 +7,9 @@ appTitle=My mORMot App
 DIALOG_CANCEL_ACTION=Cancel
 SAVE_BUTTON_TEXT=Save
 CANCEL_BUTTON_TEXT=Cancel
+CALL_BUTTON_TEXT=Call
+TEXT_BUTTON_TEXT=Text
+MAIL_BUTTON_TEXT=Mail
 
 WELCOME_TITLE=Welcome
 WELCOME_TEXT=This demo application shows you how to use the sap.m library (OpenUI5) along with the mORMot !
@@ -23,7 +26,13 @@ MEMBER_ADD_PAGE_TITLE=Add new member
 MEMBER_ADD_FORM_TITLE=New member
 MEMBER_ADD_TITLE=General info
 ADD_MEMBER_SUCCESS_TEXT=Member added !!
-ADD_MEMBER_FAILURE_TEXT=Member added !!
+ADD_MEMBER_FAILURE_TEXT=Error : member not added !!
+
+TEAM_ADD_PAGE_TITLE=Add new team
+TEAM_ADD_FORM_TITLE=New team
+TEAM_ADD_TITLE=General info
+ADD_TEAM_SUCCESS_TEXT=Team added !!
+ADD_TEAM_FAILURE_TEXT=Error : team not added !!
 
 ADD_TEAM_TITLE=Member team
 ADD_TEAM_LABLE=Choose team
@@ -31,7 +40,6 @@ ADD_TEAM_LABLE=Choose team
 MEMBER_SORTFIRSTNAME_BUTTON_TEXT=FirstName
 MEMBER_SORTLASTNAME_BUTTON_TEXT=LastName
 MEMBER_SORTDOB_BUTTON_TEXT=Birthday
-MEMBER_MAIL_BUTTON_TEXT=Mail
 MEMBER_NAME_ERROR=Please enter firstname and lastname
 
 NONE=None
@@ -41,12 +49,10 @@ PHONE=Phone
 EMAIL=Email
 TEAM=Team
 
-
-
 ResumeOf=Resume of
 Info=Info
 Projects=Projects
 Hobbies=Hobbies
 Notes=Notes
 FlipToResume=Flip to Resume
-FlipToResume.tooltip=See the resume of this employee
+FlipToResume.tooltip=See the resume of this member
