--- a/WebContent/i18n/appTexts_nl.properties
+++ b/WebContent/i18n/appTexts_nl.properties
@@ -5,6 +5,14 @@ DIALOG_CANCEL_ACTION=Cancel
 WELCOME_TITLE=Welkom
 WELCOME_TEXT=Demo application met OpenUI5 en mORMot !
 
+DIALOG_CANCEL_ACTION=Afbreken
+SAVE_BUTTON_TEXT=Opslaan
+CANCEL_BUTTON_TEXT=Afbreken
+CALL_BUTTON_TEXT=Bel
+TEXT_BUTTON_TEXT=SMS
+MAIL_BUTTON_TEXT=EMail
+
+
 HOME_TITLE=mORMot Team App
 HOME_SEARCH_PLACEHOLDER=Zoek ...
 HOME_SEARCH_TOOLTIP=Zoeken naar leden
@@ -16,4 +24,11 @@ TEAM_NO_DATA=Geen leden gevonden
 MEMBER_SORTFIRSTNAME_BUTTON_TEXT=Voornaam
 MEMBER_SORTLASTNAME_BUTTON_TEXT=Achternaam
 MEMBER_SORTDOB_BUTTON_TEXT=Geboortedatum
-MEMBER_MAIL_BUTTON_TEXT=Mail
+
+ResumeOf=Resumé van
+Info=Info
+Projects=Projecten
+Hobbies=Hobbies
+Notes=Notes
+FlipToResume=Ga naar het resumé
+FlipToResume.tooltip=Bekijk het resumé van dit lid
