Small changes to mORMot server

--- a/WebContent/i18n/appTexts_nl.properties
+++ b/WebContent/i18n/appTexts_nl.properties
@@ -1,9 +1,8 @@
 SHELL_TITLE=Mijn mORMot Appie
 
-DIALOG_CANCEL_ACTION=Cancel
+appDescription=Deze demo is mooi met mORMot!
 
-WELCOME_TITLE=Welkom
-WELCOME_TEXT=Demo application met OpenUI5 en mORMot !
+appTitle=Mijn mORMot Appie
 
 DIALOG_CANCEL_ACTION=Afbreken
 SAVE_BUTTON_TEXT=Opslaan
@@ -11,6 +10,9 @@ CANCEL_BUTTON_TEXT=Afbreken
 CALL_BUTTON_TEXT=Bel
 TEXT_BUTTON_TEXT=SMS
 MAIL_BUTTON_TEXT=EMail
+
+WELCOME_TITLE=Welkom
+WELCOME_TEXT=Demo application met OpenUI5 en mORMot !
 
 
 HOME_TITLE=mORMot Team App
@@ -21,9 +23,32 @@ HOME_TEAM_LIST_HEADER=Teams
 
 TEAM_NO_DATA=Geen leden gevonden
 
+MEMBER_ADD_PAGE_TITLE=Voeg nieuw lid toe
+MEMBER_ADD_FORM_TITLE=Nieuw lid
+MEMBER_ADD_TITLE=Algemene info
+ADD_MEMBER_SUCCESS_TEXT=Lid toegevoegd !!
+ADD_MEMBER_FAILURE_TEXT=Fout : lid niet toegevoegd !!
+
+TEAM_ADD_PAGE_TITLE=Voeg nieuw team toe
+TEAM_ADD_FORM_TITLE=Nieuw team
+TEAM_ADD_TITLE=Algemene info info
+ADD_TEAM_SUCCESS_TEXT=Team toegevoegd !!
+ADD_TEAM_FAILURE_TEXT=Fout : team niet toegevoegd !!
+
+ADD_TEAM_TITLE=Team lid
+ADD_TEAM_LABLE=Kies team
+
 MEMBER_SORTFIRSTNAME_BUTTON_TEXT=Voornaam
 MEMBER_SORTLASTNAME_BUTTON_TEXT=Achternaam
 MEMBER_SORTDOB_BUTTON_TEXT=Geboortedatum
+MEMBER_NAME_ERROR=Voornaam en achternaam verplicht !!
+
+NONE=None
+FIRSTNAME=Voornaam
+LASTNAME=Achternaam
+PHONE=Telefoon
+EMAIL=Email
+TEAM=Team
 
 ResumeOf=Resumé van
 Info=Info
