Added Delphi project
Delphi + some UI changes

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -7,6 +7,8 @@ appTitle=My mORMot App
 DIALOG_CANCEL_ACTION=Cancel
 SAVE_BUTTON_TEXT=Save
 CANCEL_BUTTON_TEXT=Cancel
+DELETE_BUTTON_TEXT=Delete
+UPDATE_BUTTON_TEXT=Update
 CALL_BUTTON_TEXT=Call
 TEXT_BUTTON_TEXT=Text
 MAIL_BUTTON_TEXT=Mail
