--- a/WebContent/i18n/appTexts_fr.properties
+++ b/WebContent/i18n/appTexts_fr.properties
@@ -8,7 +8,9 @@ WELCOME_TEXT=Demo application avec OpenUI5 et mORMot !
 DIALOG_CANCEL_ACTION=Annuler
 SAVE_BUTTON_TEXT=Sauver
 CANCEL_BUTTON_TEXT=Annuler
-CALL_BUTTON_TEXT=TÃ©lÃ©phone
+DELETE_BUTTON_TEXT=Effacer
+UPDATE_BUTTON_TEXT=Réactualiser
+CALL_BUTTON_TEXT=Télé
 TEXT_BUTTON_TEXT=SMS
 MAIL_BUTTON_TEXT=EMail
 
