--- a/WebContent/i18n/appTexts_nl.properties
+++ b/WebContent/i18n/appTexts_nl.properties
@@ -7,6 +7,8 @@ appTitle=Mijn mORMot Appie
 DIALOG_CANCEL_ACTION=Afbreken
 SAVE_BUTTON_TEXT=Opslaan
 CANCEL_BUTTON_TEXT=Afbreken
+DELETE_BUTTON_TEXT=Verwijder
+UPDATE_BUTTON_TEXT=Bijwerken
 CALL_BUTTON_TEXT=Bel
 TEXT_BUTTON_TEXT=SMS
 MAIL_BUTTON_TEXT=EMail
