Added authentication ... thanks esmondb

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -12,6 +12,11 @@ UPDATE_BUTTON_TEXT=Update
 CALL_BUTTON_TEXT=Call
 TEXT_BUTTON_TEXT=Text
 MAIL_BUTTON_TEXT=Mail
+WWW_BUTTON_TEXT=Web
+
+
+MAIL_BUTTON_TEXT.TOOLTIP=Click to email
+WWW_BUTTON_TEXT.TOOLTIP=Click to go to website
 
 WELCOME_TITLE=Welcome
 WELCOME_TEXT=This demo application shows you how to use the sap.m library (OpenUI5) along with the mORMot !
@@ -51,6 +56,7 @@ PHONE=Phone
 EMAIL=Email
 TEAM=Team
 GENDER=Gender
+DOB=Day of birth
 
 ResumeOf=Resume of
 Info=Info
