Added select table with custom formatter for team name.

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -13,6 +13,7 @@ CALL_BUTTON_TEXT=Call
 TEXT_BUTTON_TEXT=Text
 MAIL_BUTTON_TEXT=Mail
 WWW_BUTTON_TEXT=Web
+ALLMEMBER_BUTTON_TEXT=All
 
 
 MAIL_BUTTON_TEXT.TOOLTIP=Click to email
