--- a/WebContent/i18n/appTexts_fr.properties
+++ b/WebContent/i18n/appTexts_fr.properties
@@ -13,7 +13,8 @@ UPDATE_BUTTON_TEXT=Réactualiser
 CALL_BUTTON_TEXT=Télé
 TEXT_BUTTON_TEXT=SMS
 MAIL_BUTTON_TEXT=EMail
-
+WWW_BUTTON_TEXT=WWWW
+ALLMEMBER_BUTTON_TEXT=Chacun
 
 HOME_TITLE=mORMot Team App
 HOME_SEARCH_PLACEHOLDER=Chercher ...
