--- a/WebContent/i18n/appTexts_nl.properties
+++ b/WebContent/i18n/appTexts_nl.properties
@@ -12,6 +12,8 @@ UPDATE_BUTTON_TEXT=Bijwerken
 CALL_BUTTON_TEXT=Bel
 TEXT_BUTTON_TEXT=SMS
 MAIL_BUTTON_TEXT=EMail
+WWW_BUTTON_TEXT=Web
+ALLMEMBER_BUTTON_TEXT=Iedereen
 
 WELCOME_TITLE=Welkom
 WELCOME_TEXT=Demo application met OpenUI5 en mORMot !
