Added navigation properties and some other metadata improvements
Added fieldlength into metadata.
Added sap-special tags into metadata.

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -67,3 +67,5 @@ Hobbies=Hobbies
 Notes=Notes
 FlipToResume=Flip to Resume
 FlipToResume.tooltip=See the resume of this member
+
+ERRORTEXT=We have an error !
