--- a/WebContent/i18n/appTexts_fr.properties
+++ b/WebContent/i18n/appTexts_fr.properties
@@ -46,3 +46,5 @@ Hobbies=Hobbies
 Notes=Notes
 FlipToResume=Va a le resumé
 FlipToResume.tooltip=Voire le resumé de membre
+
+ERRORTEXT=Nous avons une erreur !
