--- a/WebContent/i18n/appTexts_nl.properties
+++ b/WebContent/i18n/appTexts_nl.properties
@@ -64,3 +64,5 @@ Hobbies=Hobbies
 Notes=Notes
 FlipToResume=Ga naar het resumé
 FlipToResume.tooltip=Bekijk het resumé van dit lid
+
+ERRORTEXT=Er is een fout opgetreden !
