Small code refactoring ... no functional changes

--- a/WebContent/i18n/appTexts.properties
+++ b/WebContent/i18n/appTexts.properties
@@ -69,3 +69,6 @@ FlipToResume=Flip to Resume
 FlipToResume.tooltip=See the resume of this member
 
 ERRORTEXT=We have an error !
+
+ObjectCommentsTabTitle=Comments
+ObjectCommentNoData=No comments
